--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<navbar [isLogged]="false"></navbar>
+<navbar></navbar>
 <div  class="jumbotron jumbotron-fluid">
     <div class="container">
       <h1 class="display-3">ShareGames</h1>
