--- a/src/app/myGames/myGames.component.html
+++ b/src/app/myGames/myGames.component.html
@@ -1,5 +1,5 @@
-<navbar [isLogged]="true" [user]="user"></navbar>
-    <div class="container">
+<navbar> </navbar>
+    <div class="container"> 
             <div class="row">
                 <div class="col-md-4">
                       <div class="thumbnail">
@@ -40,10 +40,10 @@
                                     <span class="glyphicon glyphicon-star"></span>
                                     (10 reviews)
                                 </div>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>                                
+                                <p id="summary">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>                                
                                 <div class="space-ten"></div>
                                 <div class="btn-ground">
-                                    <button type="button" class="btn btn-primary"> supprimer</button>
+                                    <button type="button" class="btn btn-primary"> retirer </button>
                                     <button type="button" class="btn btn-primary"> retirer des échanges</button>
                                 </div>
                             </div>
