--- a/src/app/admin/games/games.component.html
+++ b/src/app/admin/games/games.component.html
@@ -1,6 +1,7 @@
 <navbar-admin></navbar-admin>
-<div class="container">
-    <div class="col-xs-8">
+<div class="col-xs-8 alert alert-danger" *ngIf="games.length == 0"><h1>La liste des jeux des utilisateurs est vide </h1></div>
+<div class="container" *ngIf="games.length > 0">
+    <div class="col-xs-8" *ngFor="let gameUsers of games">
             <div class="col-xs-4">
                     <div class="thumbnail">
                         <img src="http://image.jeuxvideo.com/medias-md/149711/1497112456-6769-card.jpg" alt="" class="img-responsive">
@@ -16,81 +17,40 @@
                         <div class="space-ten"></div>
                     </div>
                 </div>
-                <div class="col-xs-4">
-                    <div class="thumbnail">
-                        <img src="http://image.jeuxvideo.com/medias-md/149711/1497112456-6769-card.jpg" alt="" class="img-responsive">
-                        <div class="caption">
-                          <h4 class="pull-right">etat du jeux</h4>
-                          <h4><a href="#">Mobile Product</a></h4>
-                          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                        </div>
-                        <div class="space-ten"></div>
-                        <div class="btn-ground text-center">
-                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#product_view"><i class="fa fa-search"></i>Détails</button>
-                        </div>
-                        <div class="space-ten"></div>
-                    </div>
-                </div>
-                <div class="col-xs-4">
-                    <div class="thumbnail">
-                        <img src="http://image.jeuxvideo.com/medias-md/149711/1497112456-6769-card.jpg" alt="" class="img-responsive">
-                        <div class="caption">
-                          <h4 class="pull-right">etat du jeux</h4>
-                          <h4><a href="#">Mobile Product</a></h4>
-                          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                        </div>
-                        <div class="space-ten"></div>
-                        <div class="btn-ground text-center">
-                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#product_view"><i class="fa fa-search"></i>Détails</button>
-                        </div>
-                        <div class="space-ten"></div>
-                    </div>
-                </div>
-                <div class="col-xs-4">
-                    <div class="thumbnail">
-                        <img src="http://image.jeuxvideo.com/medias-md/149711/1497112456-6769-card.jpg" alt="" class="img-responsive">
-                        <div class="caption">
-                          <h4 class="pull-right">etat du jeux</h4>
-                          <h4><a href="#">Mobile Product</a></h4>
-                          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                        </div>
-                        <div class="space-ten"></div>
-                        <div class="btn-ground text-center">
-                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#product_view"><i class="fa fa-search"></i>Détails</button>
-                        </div>
-                        <div class="space-ten"></div>
-                    </div>
-                </div>
+                
+                
+
+
                 <div class="modal fade product_view" id="product_view">
-                <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <a href="#" data-dismiss="modal" class="class pull-right"><span class="glyphicon glyphicon-remove"></span></a>
-                        <h3 class="modal-title">nom du jeux</h3>
-                    </div>
-                    <div class="modal-body">
-                        <div class="row">
-                            <div class="col-md-6 product_img">
-                                <img src="http://image.jeuxvideo.com/medias-md/149711/1497112456-6769-card.jpg" class="img-responsive">
+                        <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <a href="#" data-dismiss="modal" class="class pull-right"><span class="glyphicon glyphicon-remove"></span></a>
+                                <h3 class="modal-title">nom du jeux</h3>
                             </div>
-                            <div class="col-md-6 product_content">
-                                <h4>Product Id: <span>51526</span></h4>
-                                <div class="rating">
-                                    <span class="glyphicon glyphicon-star"></span>
-                                    <span class="glyphicon glyphicon-star"></span>
-                                    <span class="glyphicon glyphicon-star"></span>
-                                    <span class="glyphicon glyphicon-star"></span>
-                                    <span class="glyphicon glyphicon-star"></span>
-                                    (10 reviews)
+                            <div class="modal-body">
+                                <div class="row">
+                                    <div class="col-md-6 product_img">
+                                        <img src="http://image.jeuxvideo.com/medias-md/149711/1497112456-6769-card.jpg" class="img-responsive">
+                                    </div>
+                                    <div class="col-md-6 product_content">
+                                        <h4>Product Id: <span>51526</span></h4>
+                                        <div class="rating">
+                                            <span class="glyphicon glyphicon-star"></span>
+                                            <span class="glyphicon glyphicon-star"></span>
+                                            <span class="glyphicon glyphicon-star"></span>
+                                            <span class="glyphicon glyphicon-star"></span>
+                                            <span class="glyphicon glyphicon-star"></span>
+                                            (10 reviews)
+                                        </div>
+                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>                                
+                                        <div class="space-ten"></div>
+                                    </div>
                                 </div>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>                                
-                                <div class="space-ten"></div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                </div>
-                </div>
+                        </div>
+                        </div>
     </div>
     
     
