--- a/src/app/admin/navbar/navbar.component.html
+++ b/src/app/admin/navbar/navbar.component.html
@@ -12,7 +12,7 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li *ngIf="!isLogged" class="active"><a [routerLink]="['/admin',2,'home']">Accueil</a></li>
+          <li *ngIf="!isLogged" class="active"><a [routerLink]="['/admin',admin.id,'home']">Accueil</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-bell"></span><span class="badge">3</span></a>
@@ -67,9 +67,9 @@
         <ul class="sidebar-nav" id="sidebar">
           <li><a >Profile</a></li>
           <li><a>Messagerie</a></li>
-          <li><a [routerLink]="['/admin',2,'users']">Utilisateurs</a></li>
-          <li><a [routerLink]="['/admin',2,'games']">Jeux</a></li>
-          <li><a [routerLink]="['/admin',2,'statistics']">Statistiques</a></li>
+          <li><a [routerLink]="['/admin',admin.id,'users']">Utilisateurs</a></li>
+          <li><a [routerLink]="['/admin',admin.id,'games']">Jeux</a></li>
+          <li><a [routerLink]="['/admin',admin.id,'statistics']">Statistiques</a></li>
           <li><a>Parametres</a></li>
         </ul>
       </div>
