--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -47,7 +47,7 @@
                   <li role="separator" class="divider"></li> 
                   <li><a [routerLink]="['/users',user.id,'historique']">Historique</a></li>
                   <li role="separator" class="divider"></li> 
-                  <li><a href="#" (click)="logOut()" >Déconnexion</a></li>
+                  <li><a  (click)="logOut()" >Déconnexion</a></li>
                 </ul>
               </li>            
           </ul>
