--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -55,8 +55,8 @@ input::-webkit-input-placeholder {
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 
 }
-.form-control {
-    height: auto!important;
+:host >>> #form .form-control {
+    height: 47px !important;
     padding: 15px 51px !important;
 }
 .input-group {
@@ -121,4 +121,66 @@ span.input-group-addon i {
 }
 .control-label{
     color: black;
+}
+
+.outer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 450px;
+}
+
+@media (min-width: 768px) {
+    .row{
+        padding: 0px 70px 0px 70px;
+    }
+}
+
+@media (max-width: 767px) {
+    .row{
+        padding: 0px 20px 0px 20px;
+        margin: 0px 5px 0px 5px;
+    }
+
+    h1{
+        font-size: 30px;
+    }
+}
+
+.row{
+    color: #555;
+    width: 800px;
+}
+
+:host /deep/ .completer-input {
+    width: 100%;
+    }
+
+
+:host >>> .completer-dropdown {
+    margin-top :35px !important;
+    width: 90% !important;
+    max-width: 515px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    max-height: 100px;
+    color: red;
+}
+
+:host >>> .completer-row
+{ display: inherit; }
+
+:host >>> .completer-selected-row {
+    background-color: lightblue;
+    color: yellow;
+}
+
+:host >>> .completer-row p {
+    position: relative;
+    top: 50%;
+    transform: translateY(50%);
+}
+
+.btn-custom{
+    min-width: 100%; 
 }
