--- a/src/app/admin/navbar/navbar.component.html
+++ b/src/app/admin/navbar/navbar.component.html
@@ -41,7 +41,7 @@
                   <li role="separator" class="divider"></li> 
                   <li><a href="#">Historique</a></li>
                   <li role="separator" class="divider"></li> 
-                  <li><a href="#">Déconnexion</a></li>
+                  <li><a  (click)="logOut()">Déconnexion</a></li>
                 </ul>
               </li>            
           </ul>
@@ -69,8 +69,8 @@
           <li><a>Messagerie</a></li>
           <li><a [routerLink]="['/admin',admin.id,'users']">Utilisateurs</a></li>
           <li><a [routerLink]="['/admin',admin.id,'games']">Jeux</a></li>
-          <li><a [routerLink]="['/admin',admin.id,'statistics']">Statistiques</a></li>
-          <li><a>Parametres</a></li>
+         <!-- <li><a [routerLink]="['/admin',admin.id,'statistics']">Statistiques</a></li>-->
+          <li><a [routerLink]="['/admin',admin.id,'parameters']">Parametres</a></li>
         </ul>
       </div>
   </div>
