--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -2,7 +2,7 @@
 <div class="global">
   <div class="row main">
     <div class="main-login main-center">
-      <form [formGroup] ="formGroupSignup">
+      <form [formGroup] ="formGroupSignup" id="form">
         
           <div class="form-group has-feedback " [ngClass]="{'has-error':(!formGroupSignup.controls.name.valid && formGroupSignup.controls.name.value.length >0) || (errors.indexOf(1)>-1),'has-success':(formGroupSignup.controls.name.valid && formGroupSignup.controls.name.value.length >0)}">
               <label for="name" class="cols-sm-2 control-label">Nom :</label>
@@ -28,7 +28,7 @@
             </div>
           </div>
 
-          <div class="form-group has-feedback" [ngClass]="{'has-error':(!formGroupSignup.controls.address.valid && formGroupSignup.controls.address.value.length >0) || (errors.indexOf(3)>-1),'has-success':formGroupSignup.controls.address.valid && formGroupSignup.controls.address.value.length >0}">                
+          <!--<div class="form-group has-feedback" [ngClass]="{'has-error':(!formGroupSignup.controls.address.valid && formGroupSignup.controls.address.value.length >0) || (errors.indexOf(3)>-1),'has-success':formGroupSignup.controls.address.valid && formGroupSignup.controls.address.value.length >0}">                
               <label for="username" class="cols-sm-2 control-label">Addresse :</label>
               <div class="cols-sm-10">
                 <div class="input-group">
@@ -38,14 +38,26 @@
                   <span class="glyphicon glyphicon-remove  form-control-feedback" aria-hidden="true" *ngIf="(!formGroupSignup.controls.address.valid && formGroupSignup.controls.address.value.length >0) ||  (errors.indexOf(3)>-1)"></span>  
                 </div>
               </div>
+            </div>-->
+            <div class="form-group has-feedback" [ngClass]="{'has-error':(!formGroupSignup.controls.address.valid && formGroupSignup.controls.address.value.length >0) || (errors.indexOf(3)>-1),'has-success':formGroupSignup.controls.address.valid && formGroupSignup.controls.address.value.length >0}">                
+              <label for="username" class="cols-sm-2 control-label">Addresse :</label>
+              <div class="cols-sm-10">
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+                    <ng2-completer [(ngModel)]="searchStr"  
+                    [inputClass]="['form-control']"
+                    [ngModelOptions]="{standalone: true}"
+                    [datasource]="dataService"
+                    [minSearchLength]="6"
+                    placeholder="entrez votre addresse"
+                    (ngModelChange)="refreshData()" 
+                    ></ng2-completer>
+                    <span class="glyphicon glyphicon-ok form-control-feedback" aria-hidden="true" *ngIf="formGroupSignup.controls.address.valid && formGroupSignup.controls.address.value.length >0 && (errors.indexOf(3)==-1)"></span>
+                  <span class="glyphicon glyphicon-remove  form-control-feedback" aria-hidden="true" *ngIf="(!formGroupSignup.controls.address.valid && formGroupSignup.controls.address.value.length >0) ||  (errors.indexOf(3)>-1)"></span>  
+                </div>
+              </div>
             </div>
-           <!-- <ng2-completer [(ngModel)]="searchStr"  
-            [inputClass]="['form-control']"
-            [ngModelOptions]="{standalone: true}"
-            [datasource]="dataService"
-            [minSearchLength]="6"
-            (ngModelChange)="refreshData()" 
-            ></ng2-completer>-->
+            
 
             <!--<div class="form-group has-feedback" [ngClass]="{'has-error':!formGroupSignup.controls.postalCode.valid && formGroupSignup.controls.postalCode.value.length >0,'has-success':formGroupSignup.controls.postalCode.valid && formGroupSignup.controls.postalCode.value.length >0}">                
                 <label for="username" class="cols-sm-2 control-label">Code Postal :</label>
@@ -109,3 +121,14 @@
     </div>
   </div>
 </div>
+
+  
+
+  
+   
+  <div class="ui-widget">
+    <label for="tags">Tags: </label>
+    <input id="tags">
+  </div>
+   
+   
