--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,18 +1,18 @@
 <navbar></navbar>
 <div class="container" style="padding-top: 60px;">
-        <h1 class="page-header">Edit Profile</h1>
+        <h1 class="page-header">Profile</h1>
         <div class="row">
           <!-- left column -->
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="text-center">
               <img src="http://lorempixel.com/200/200/people/9/" class="avatar img-circle img-thumbnail" alt="avatar">
-              <h6>Upload a different photo...</h6>
+              <h6>Uploader une photo...</h6>
               <input type="file" class="text-center center-block well well-sm">
             </div>
           </div>
           <!-- edit form column -->
           <div class="col-md-8 col-sm-6 col-xs-12 personal-info">
-            <h3>Personal info</h3>
+            <h3>Information</h3>
             <form class="form-horizontal" role="form">
               <div class="form-group">
                 <label class="col-lg-3 control-label">Nom :</label>
@@ -27,36 +27,43 @@
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-lg-3 control-label">Adresse:</label>
+                <label class="col-lg-3 control-label">Adresse :</label>
                 <div class="col-lg-8">
-                  <input class="form-control" value="{{user.address}}" type="text">
+                    <ng2-completer [(ngModel)]="searchStr"  
+                    [inputClass]="['form-control']"
+                    [ngModelOptions]="{standalone: true}"
+                    [datasource]="dataService"
+                    [minSearchLength]="6"
+                    placeholder="Adresse"
+                    (ngModelChange)="refreshData()" 
+                    ></ng2-completer>
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-lg-3 control-label">Email:</label>
+                <label class="col-lg-3 control-label">Email :</label>
                 <div class="col-lg-8">
                   <input class="form-control" value="{{user.mail}}" type="text">
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-md-3 control-label">Mot de passe</label>
-                <div class="col-md-8">
+                <label class="col-lg-3 control-label">Mot de passe :</label>
+                <div class="col-lg-8">
                   <input class="form-control" value="11111122333" type="password">
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-md-3 control-label">Confirmation mot de passe</label>
-                <div class="col-md-8">
+                <label class="col-lg-3 control-label">Confirmation :</label>
+                <div class="col-lg-8">
                   <input class="form-control" value="11111122333" type="password">
                 </div>
               </div>
               <div class="form-group">
                 <label class="col-md-3 control-label"></label>
-                <div class="col-md-8">
-                  <input class="btn btn-primary" value="Save Changes"  type="button">
-                  <span></span>
-                  <input class="btn btn-default" value="Cancel" (click)="reset()">
-                </div>
+                  
+                  <input class="btn btn-primary col-lg-3 col-md-4 col-sm-4 col-xs-12" value="Modifier"  type="button">
+                  
+                  <input type="reset" class="btn btn-default col-lg-3 col-md-4 col-sm-4 col-xs-12" value="Annuler" (click)="reset()">
+                
               </div>
             </form>
           </div>
