--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -46,7 +46,7 @@
             Selectionnez d'abords une plateform :
             <div>
                 <select id="plateformGame" [(ngModel)]="idGamePlatform">
-                        <option *ngFor="let platform of platforms" [ngValue]="platform.id_platform">{{platform.nom_platform}}</option>
+                        <option *ngFor="let platform of platforms" [ngValue]="platform.idPlatform">{{platform.namePlatform}}</option>
                 </select>
             </div>
         </div>
